--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
-//        maven { url 'https://github.com/h4de5ing/repository/raw/master/repository' }
+        maven { url 'https://github.com/h4de5ing/repository/raw/master/repository' }
         maven { url 'D:\\repository\\repository\\repository' }
     }
 }
